<resources>
    <string name="app_name">Drink Water</string>
    <string name="tips">Selecione nos botões abaixo a quantidade de água consumida.</string>
    <string name="small">250ml</string>
    <string name="medium">500ml</string>
    <string name="large">1000ml</string>
    <string name="txt_today">Hoje</string>
    <string name="undo">Desfazer</string>
    <string name="result">%1$d ml</string>
</resources>