<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frappe_subtext1"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/txt_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/frappe_surface2"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/frappe_surface2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_tips"
        />

    <Button
        android:id="@+id/btn_small"
        android:text="@string/small"
        app:icon="@drawable/icon_cupwater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_medium"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btn_medium"
        android:text="@string/medium"
        app:icon="@drawable/icon_cupwater"
        app:layout_constraintStart_toEndOf="@id/btn_small"
        app:layout_constraintEnd_toStartOf="@id/btn_large"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        />

    <Button
        android:id="@+id/btn_large"
        android:text="@string/large"
        app:icon="@drawable/icon_cupwater"
        app:layout_constraintStart_toEndOf="@id/btn_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/txt_today"
        android:text="@string/txt_today"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="@color/frappe_surface2"
        app:layout_constraintHorizontal_bias="0.30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/txt_result"
        tools:text="500ml"
        android:text="0ml"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_today"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="@color/frappe_crust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>